2013-12-05  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* debug/stpncpy_chk.c (__stpncpy_chk): Remove unused variables.

	[BZ #15941]
	* Makefile (INSTALL): Add install-plain.texi as the primary
	dependency.
	* manual/install-plain.texi: New file.
	* manual/install.texi: Include node directive only for
	non-plaintext output.

2013-12-04  Joseph Myers  <joseph@codesourcery.com>

	* stdlib/longlong.h: Update from GCC.

	[BZ #6807]
	[BZ #15901]
	* math/w_j0.c (y0): Raise FE_DIVBYZERO on zero argument.
	* math/w_j0f.c (y0f): Likewise.
	* math/w_j0l.c (__y0l): Likewise.
	* math/w_j1.c (y1): Likewise.
	* math/w_j1f.c (y1f): Likewise.
	* math/w_j1l.c (__y1l): Likewise
	* math/w_jn.c (yn): Likewise.
	* math/w_jnf.c (ynf): Likewise.
	* sysdeps/ieee754/k_standard.c (__kernel_standard): Use ERANGE for
	Bessel function pole errors in _POSIX_ mode.  Use NAN as return
	value for Bessel function domain errors outside _SVID_ mode.
	Adjust sign of return value for yn (negative integer, 0).
	* sysdeps/ieee754/ldbl-128/e_jnl.c (__ieee754_ynl): Use division
	by zero in return for negative x and set sign appropriately for
	negative n.
	* sysdeps/ieee754/ldbl-128ibm/e_jnl.c (__ieee754_ynl): Likewise.
	* sysdeps/ieee754/ldbl-96/e_jnl.c (__ieee754_ynl): Likewise.
	* math/libm-test.inc (y0_test_data): Add more tests and adjust
	expectations in error cases.
	(y1_test_data): Likewise.
	(yn_test_data): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-11-12  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/Makefile (abi-variants): Rename
	"64" to "64-v1".  Add "64-v2".
	(abi-64-options): Rename to ...
	(abi-64-v1-options): ... this.   Redefine _CALL_ELF.
	(abi-64-condition): Rename to ...
	(abi-64-v1-condition): ... this.  Add _CALL_ELF check.,
	(abi-64-ld-soname): Rename to ...
	(abi-64-v1-ld-soname): ... this.
	(abi-64-v2-options): Define.
	(abi-64-v2-condition): Likewise.