@@ -1,5 +1,11 @@
 2013-12-05  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
+	* benchtests/README: Add note about output arguments.
+	* benchtests/bench-sincos.c: Remove file.
+	* benchtests/sincos-inputs: New file.
+	* scripts/bench.pl: Identify output arguments and define
+	static variables for them.
+
 	* debug/stpncpy_chk.c (__stpncpy_chk): Remove unused variables.
 
 	[BZ #15941]
